dfir_rs/tests/snapshots/surface_forwardref__forwardref_basic_backward@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_forwardref.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[/"(1v1) <code>for_each(|v| out_send.send(v).unwrap())</code>"\]:::pushClass
2v1[\"(2v1) <code>source_iter(0..10)</code>"/]:::pullClass
2v1-->1v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    2v1
    1v1
    subgraph sg_1v1_var_forward_ref ["var <tt>forward_ref</tt>"]
        2v1
    end
end

